밸류타입에 @EqaulsAndHashCode 적용